  * Bump the FLAC decoder's priority above ffmpegaudio. This should fix
    various problems with FLAC playback.
  * Build fix (undefined symbol) for when using older ffmpeg.
  * TTA demuxer fixes; allow seeking.
  * More meta-information tags. (Nothing sets these yet, though.)
  * Added basic support for .qtl (Quicktime media link).
  * "Fixed" playback of 24-bit FLAC.

xine-lib (1.1.17) 2009-12-01
  * Add support for Matroska SIMPLEBLOCK.
  * Add support for sndio (OpenBSD sound API).
  * Correct invalid MIME info in the MOD demuxer.
  * Fix a resource leak in libdvdnav.
  * Properly NUL-terminate when reading ID3v2.2 tag content.
  * Fix handling of the length of UTF-16 content sourced from, e.g., ID3 tags.
  * Make ~/.xine/catalog.cache writing safer: write a new file & atomically
    replace the old one.
  * Initial parsing of Xing header LAME extension.
  * Fixes for gapless playback.
  * Added padding delay to the first and last frames (MPEG audio).
  * Fixed buggy discontinuity handling when playing short streams and using the gapless switch. The current time should not be used here.
  * Added audio padding handling. (New buffer flag for this.)
  * Fix seeking in large raw DV files.
  * Ported to new libmpcdec API (retaining build compat. with the old API).
  * Cope with CDDB return code 211 (multiple entries).
  * Allow reading of non-block-sized chunks from audio CDs.
  * Add a user agent & protocol hack ("qthttp://...") to allow direct
    viewing of Apple film trailers.
  * Fixed int-to-float conversion in the JACK output plugin.
  * Work around MOD files with reported length == 0.
  * Reworked Matroska demuxer. Now reads files created by mkvmerge 2.7.0.
  * Support BluRay/HDMV streams & subtitles.
  * The XML parser & lexer code now has re-entrancy.
  * Fixed a bug which prevented "dvb://" (no channel specified) working with
    the default configuration.
  * Handle VC1 extradata requirement (should fix playback).

xine-lib (1.1.16.3) 2009-04-03